force-app/main/default/objects/ScrapSupplierLimit__c/ScrapSupplierLimit__c.object-meta.xml
<CustomObject>
    <label>Ліміти постачальників</label>
    <nameField>
        <label>Назва ліміту</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>ScrapSupplierLimit</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>