force-app/main/default/objects/ScrapSupplierLimit__c/fields/Approved__c.field-meta.xml
<CustomField>
    <fullName>Approved__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Узгоджено</label>
    <type>Checkbox</type>
</CustomField>