force-app/main/default/objects/ScrapSupplierLimit__c/fields/Month__c.field-meta.xml
<CustomField>
    <fullName>Month__c</fullName>
    <label>Місяць</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>MonthUA</valueSetName>
    </valueSet>
</CustomField>