force-app/main/default/objects/ScrapSupplierLimit__c/fields/MonthLimit__c.field-meta.xml
<CustomField>
    <fullName>MonthLimit__c</fullName>
    <label>Місячний ліміт, т.</label>
    <summarizedField>SupplierLimitDetails__c.Limit__c</summarizedField>
    <summaryForeignKey>SupplierLimitDetails__c.ScrapSupplierLimit__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>