force-app/main/default/objects/ScrapSupplierLimit__c/fields/MonthLookup__c.field-meta.xml
<CustomField>
    <fullName>MonthLookup__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>MonthLookup</label>
    <referenceTo>Decade__c</referenceTo>
    <relationshipName>ScrapSupplierLimit</relationshipName>
    <type>Lookup</type>
</CustomField>