force-app/main/default/objects/ScrapSupplierLimit__c/fields/MonthTxt__c.field-meta.xml
<CustomField>
    <fullName>MonthTxt__c</fullName>
    <formula>MonthLookup__r.Name + &apos; &apos; + MonthLookup__r.Parent__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Місяць плану</label>
    <type>Text</type>
</CustomField>