force-app/main/default/objects/ScrapSupplierLimit__c/fields/SentToApprove__c.field-meta.xml
<CustomField>
    <fullName>SentToApprove__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Подано на схвалення</label>
    <type>Checkbox</type>
</CustomField>