force-app/main/default/objects/ScrapSupplierLimit__c/fields/Stage__c.field-meta.xml
<CustomField>
    <fullName>Stage__c</fullName>
    <formula>RecordType.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Стадія</label>
    <type>Text</type>
</CustomField>