force-app/main/default/objects/ScrapSupplierLimit__c/fields/Supplier__c.field-meta.xml
<CustomField>
    <fullName>Supplier__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Постачальник</label>
    <referenceTo>Account</referenceTo>
    <relationshipName>ScrapSupplierLimit</relationshipName>
    <type>Lookup</type>
</CustomField>