force-app/main/default/objects/ScrapSupplierLimit__c/recordTypes/Approved.recordType-meta.xml
<RecordType>
    <fullName>Approved</fullName>
    <active>true</active>
    <label>Узгоджений</label>
</RecordType>