force-app/main/default/objects/ScrapSupplierLimit__c/recordTypes/Declared.recordType-meta.xml
<RecordType>
    <fullName>Declared</fullName>
    <active>true</active>
    <label>Заявлений</label>
</RecordType>